[gd_scene load_steps=9 format=2]

[ext_resource path="res://ItemContainers/ItemContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/chest2.png" type="Texture" id=2]
[ext_resource path="res://CollisionBoxes/InteractableArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://ItemContainers/Chest.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sound/SoundFX/Chest Creak.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sound/SoundFX/open chest.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23, 14.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 3.5 )

[node name="Chest" instance=ExtResource( 1 )]
position = Vector2( 61, 46 )
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 4 )

[node name="Sprite" parent="." index="0"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
hframes = 2

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 9.5 )
shape = SubResource( 1 )

[node name="InteractableArea" parent="." index="2" instance=ExtResource( 3 )]
position = Vector2( 0, 11 )

[node name="CollisionShape2D" parent="InteractableArea" index="0"]
shape = SubResource( 2 )

[node name="ItemSprite" type="Sprite" parent="." index="3"]
position = Vector2( 0, -35 )
scale = Vector2( 1.5, 1.5 )

[node name="OpenAudioStreamPlayer" type="AudioStreamPlayer" parent="." index="4"]
pause_mode = 2
stream = ExtResource( 5 )

[node name="GetItemAudioStreamPlayer" type="AudioStreamPlayer" parent="." index="5"]
pause_mode = 2
stream = ExtResource( 6 )

[editable path="InteractableArea"]
